# rusto

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
input/: chart_data.json
output/wall/: pack.mcmeta
output/wall/data/wall/function/: east.mcfunction  north.mcfunction  south.mcfunction  west.mcfunction
src/: graph_generator.rs  lib.rs  main.rs  map_override.rs  moripa_tokyo_tower_wall.rs  notion.rs  notion_minecraft_db.rs  tau_t_shirt.rs
