[package]
name = "rusto"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "http2"] }
uuid = { version ="1.19.0", features = ["serde"]}
chrono = "0.4.42"

[workspace]
members = []
exclude = ["frontend"]
