[package]
name = "rusto"
version = "0.1.0"
edition = "2024"

[dependencies]
# image = "0.25.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "native-tls",
    "http2",
] }
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
anyhow = "1"
serde_json = "1"
resvg = "0.47.0"
usvg = "0.47.0"
base64 = "0.22"

[workspace]
members = []
exclude = ["frontend"]
