[package]
name = "rusto"
version = "0.1.0"
edition = "2024"

[dependencies]
# image = "0.25.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "native-tls",
    "http2",
] }
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
anyhow = "1"
serde_json = "1"
resvg = "0.47.0"
usvg = "0.47.0"
base64 = "0.22"
hyper = { version = "1.10.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
futures = "0.3"


[workspace]
members = []
exclude = ["frontend"]
